# intercurso-ifrn-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy-pipeline.yml  pr-verify.yml
alembic/: env.py
alembic/versions/: 08159feaaaef_v1.py  132644846028_v1.py  6906e02e3cee_v3.py  7b80a5f923ca_v2.py  b5886801e33d_v5.py  c004b9fe7984_v6.py  c1a9d3f7e001_v6.py  f61e65246346_v4.py
business/auth/: auth_service.py  jwt_service.py  login_suap_adapter.py  refresh_token_service.py
business/bracket/: create_bracket_adapter.py  delete_match_adapter.py  get_bracket_config_suggestion_adapter.py  resort_bracket_adapter.py  update_match_adapter.py
business/match/: _shared.py  end_period_adapter.py  end_set_adapter.py  pause_clock_adapter.py  register_card_adapter.py  register_goal_adapter.py  resume_clock_adapter.py  start_match_adapter.py  start_period_adapter.py
business/modality/: create_modality_adapter.py
business/season/: close_registration_adapter.py  create_season_adapter.py  finish_season_adapter.py  get_season_details_adapter.py  manage_season_adapter.py  reopen_registration_adapter.py
business/team/: approve_team_adapter.py  confirm_donation_adapter.py  create_team_adapter.py  create_team_members_adapter.py  get_team_invite_info_adapter.py  join_team_via_invite_adapter.py  leave_team_adapter.py  remove_member_adapter.py  select_captain_adapter.py  submit_team_adapter.py
business/users/: create_user_adapter.py  create_user_by_admin_adapter.py  get_user_profile_adapter.py  update_user_by_admin_adapter.py
core/: command.py  config.py  context.py
core/persistence/: bracket_group_repository_port.py  bracket_group_team_repository_port.py  bracket_repository_port.py  match_event_repository_port.py  match_repository_port.py  season_repository_port.py  (+9 more)
docs/: UC001_GestãoDeTemporadas_CriarTemporada.md  UC002_GestãoDeTemporadas_AbrirInscrições.md  UC002_GestãoDeTemporadas_GerenciarTemporada.md  UC004_GestãoDeModalidades_CadastrarModalidade.md  UC005_GestãoDeEquipes_CriarEquipe.md  UC006_GestãoDeEquipes_EntrarViaConvite.md  UC007_GestãoDeEquipes_GerenciarMembros.md  UC008_GestãoDeEquipes_SubmeterEquipe.md  UC009_GestãoDeEquipes_AprovarEquipe.md  UC010_GestãoDeEquipes_ConfirmarDoação.md  UC011_GestãoDeChaveamento_CriarChaveamento.md  UC012_GestãoDeChaveamento_GerenciarChaveamento.md  UC015_GestãoDePartidas_FinalizarPartida.md  UC017_GestãoDePartidas_CorrigirEvento.md
domain/: abstract_domain.py  auth_token.py  bracket.py  bracket_group.py  bracket_group_team.py  match.py  match_event.py  modality_configuration.py  refresh_token.py  team.py  team_member.py  team_members.py  user.py
persistence/: database.py
security/: config.py
tests/: conftest.py
web/: dependencies.py  main.py
(+299 files in other folders)
