[project]
name = "intercurso-ifrn-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.10.0",
    "sqlalchemy[asyncio]==2.0.43",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "pytest==9.0.2",
    "ruff>=0.14.9",
    "taskipy>=1.14.1",
    "uvicorn[standard]==0.32.0",
    "httpx==0.27.2",
]

[tool.setuptools]
packages = [
    "web",
    "core",
    "domain",
    "business",
    "security",
    "persistence",
]

[tool.taskipy.tasks]
run = "uv run uvicorn web/main.py --reload"
test = "uv run pytest"
lint = "uv run ruff check ."
format = "uv run ruff format ."
