[project]
name = "intercurso-ifrn-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "pydantic==2.10.0",
    "pytest==9.0.2",
    "python-dotenv==1.1.0",
    "ruff>=0.14.10",
    "sqlalchemy[asyncio]==2.0.43",
    "taskipy>=1.14.1",
    "uvicorn[standard]==0.32.0",
]

